apply http://gcc.gnu.org/bugzilla/attachment.cgi?id=12610&action=view (http://gcc.gnu.org/bugzilla/show_bug.cgi?id=27067): reconcile stdcall attribute with multiple inheritance for mingw build